style: update style 1.0

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,6 +18,37 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  }
+  
+  body::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../src/assets/img/backgroundImage.png');
+    background-position: center center;
+    z-index: -1; /* Certifique-se de que o pseudo-elemento fique atrás do conteúdo */
+}
+
+.App{
+  margin: 0;
+  padding: 0;
+  background-color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  height: auto;
+  padding: 6rem;
+  border-radius: 10px;
 }
 
 .inputContainer{
@@ -27,13 +59,37 @@ body{
   gap: 3rem;
 }
 
+.inputContainer > input {
+  padding: 8px;
+  font-size: 16px;
+  border: none;
+  background-color: #1c1c1c;
+  border-radius: 8px;
+  color: #fbfbfb;
+}
+  
+.inputContainer > input:hover{
+  border-bottom: solid 2px #7f48c7;
+}
+
+.inputContainer > input:focus{
+  border-left: solid 2px #7f48c7;
+  border-bottom: solid 2px #7f48c7;
+  outline: none;
+}
+
 .buttonContainer{
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
 
+.inputContainer > button {
+  border: none;
+  outline: none;
+  color: #fbf;
 }
 
 .Lista ul{
