style: fix style at buttons style 1.2.1

--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,10 @@ body{
   gap: 6px;
 }
 
+.buttonContainer > button:hover {
+  cursor: pointer;
+}
+
 span{
   font-weight: 600;
   text-transform:uppercase;
