style: fix style button gravar style 1.2.1

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,10 @@ body{
   padding: 10px 50px;
 }
 
+.buttonGravar:hover{
+  cursor: pointer;
+}
+
 .linhaDeRegistro{
   display: flex;
   justify-content: center;
