--- a/src/index.css
+++ b/src/index.css
@@ -90,11 +90,18 @@ body{
   font-weight: 700;
   color: #fbfbfb;
   padding: 10px 50px;
+  background-color: green;
+  border: 2px solid green;
+  border-radius: 6px;
+  transition: 0.4s;
 }
 
 .buttonGravar:hover{
+  background-color: transparent;
+  border: 2px solid green;
   cursor: pointer;
 }
+
 
 .linhaDeRegistro{
   display: flex;
@@ -108,9 +115,30 @@ body{
   gap: 6px;
 }
 
-.buttonContainer > button:hover {
+.buttonContainer > button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  font-weight: 600;
+  border-radius: 4px;
+}
+
+#ButtonDelete{
+  background-color: red;
+  border: 1px solid red;
+}
+
+#ButtonUpdate{
+  background-color: orange;
+  border: 1px solid orange;
+}
+
+.buttonContainer > button:hover{
   cursor: pointer;
 }
+
+
 
 span{
   font-weight: 600;
